QuickSettings: Camera tile
Change-Id: Id0beb3dd559536bb5571ddc87cb0bcb4945b1a77

Conflicts:

	core/java/com/android/internal/util/cm/QSConstants.java
	core/java/com/android/internal/util/cm/QSUtils.java
	packages/SystemUI/res/values/cm_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -580,4 +580,7 @@
     <string name="pie_hour_format_24">HH:mm</string>
     <string name="pie_am_pm">a</string>
 
+    <!-- Camera tile toasts -->
+    <string name="quick_settings_camera_error_connect">Can\'t connect to camera</string>
+
 </resources>
